[package]
name = "decster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = "2.0.1"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
derive_more = { version = "2.0.1", features = ["display", "from"] }
dirs = "6.0.0"
globset = "0.4.16"
hex = "0.4.3"
indexmap = "2.9.0"
itertools = "0.14.0"
nix = { version = "0.29.0", features = ["user"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
sha2 = "0.10.8"
thiserror = "2.0.12"
toml = "0.8.20"
walkdir = "2.5.0"
