[package]
name = "decster"
description = "A declarative way to manage your system"
categories = ["command-line-utilities"]
authors = ["eggstrom"]
license = "MIT"
repository = "https://github.com/eggstrom/decster"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
default = ["http"]
http = ["dep:reqwest"]

[dependencies]
anyhow = "1.0.97"
bincode = "2.0.1"
clap = { version = "4.5.38", features = ["cargo"] }
crossterm = "0.28.1"
derive_more = { version = "2.0.1", features = ["display", "from"] }
dirs = "6.0.0"
globset = "0.4.16"
hex = "0.4.3"
indexmap = "2.9.0"
itertools = "0.14.0"
nix = { version = "0.29.0", features = ["user"] }
reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
serde = { version = "1.0.219", features = ["derive", "rc"] }
sha2 = "0.10.8"
termtree = "0.5.1"
thiserror = "2.0.12"
toml = "0.8.20"
upon = "0.9.0"
walkdir = "2.5.0"
